# LMSPlatform

./: .gitignore  CLAUDE.md  README.md  package.json
.claude/context/: domain-glossary.md  engineering-rules.md  file-map.md  open-questions.md  project-summary.md  testing-focus.md
.github/agents/: development.agent.md  frontend-guard.agent.md  testing.agent.md
.github/workflows/: ci.yml
apps/api/: pyproject.toml
apps/api/src/app/: main.py
apps/api/src/app/api/v1/: router.py
apps/api/src/app/api/v1/routes/: auth.py  catalog.py  health.py  overview.py
apps/api/src/app/core/: config.py
apps/api/src/app/db/: session.py
apps/api/src/app/models/: __init__.py  catalog.py  identity.py
apps/api/src/app/schemas/: auth.py  catalog.py  student.py
apps/api/src/app/services/: catalog.py  identity.py  student.py
apps/api/tests/: test_health.py
apps/web/: next.config.ts  package-lock.json  package.json
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/app/cohorts/: page.tsx
apps/web/src/app/dashboard/: page.tsx
apps/web/src/app/learning/: page.tsx
apps/web/src/app/programs/: page.tsx
apps/web/src/components/: course-catalog-overview.tsx  enrollment-overview.tsx  identity-overview.tsx  learning-core-overview.tsx  learning-lesson-overview.tsx  learning-progress-overview.tsx  platform-navigation.clean.tsx  platform-navigation.tsx  student-dashboard-overview.tsx
docs/: 01-product-requirements.md  02-development-plan.md  03-architecture-outline.md  04-testing-strategy.md  05-implementation-bootstrap.md
infra/docker/: docker-compose.yml
(+1 files in other folders)
